--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -223,15 +223,17 @@
 	
 	\item Podać formalną definicję liczb wymiernych (na bazie liczb całkowitych). Jakiej struktury jest to szczególny przypadek?
 	\Odp{
-	$\frac{\mathbb{Z}\times (\mathbb{Z}\setminus\emptyset)}{\sim} \qquad (m,n)\sim (a,b) \Leftrightarrow m\cdot b=n\cdot a$\\
+	$\frac{\mathbb{Z}\times (\mathbb{Z}\setminus\{0\})}{\sim} \qquad (m,n)\sim (a,b) \Leftrightarrow m\cdot b=n\cdot a$\\
 	$\frac{m}{n}=\frac{a}{b}$ np. $(3,7)=(-6,-14)=\frac{3}{7}$
-	}
 	
+	Jest to struktura ciała.
+	}
+	\newpage
 	\item Podać „szkolną” definicję liczby wymiernej.
 	\Odp{
 		$p-$wymierna $\Leftrightarrow$ gdy można ją przedstawić w postaci ułamka o liczniku i mianowniku całkowitym.
 	}
-	\newpage
+	
 	\item Kto to był Nicolas Bourbaki?
 	\Odp{
 		To była grupa młodych matematyków, których celem było napisanie kompletu aktualnych podręczników do matematyki.
