--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -241,14 +241,14 @@
 	
 	\item Zdefiniować „złoty podział”. Obliczyć liczbę otrzymaną w wyniku złotego podziału.
 	\Odp{Złoty podział jest to podział pewnego odcinka w następujący sposób
-	$$\frac{a}{b}=\frac{a+b}{a}$$, dla $a=1$
-	$\frac{1}{b}=\frac{b+a}{1}$
-	$b(b+1)=1$
-	$b*2+b-1=0$
-	$\Delta=1+4=5$
-	$b_1=\frac{-1-\sqrt{5}}{2}$
-	$b_2\frac{-1+\sqrt{5}}{2}$
-	dotyczył on w szczególności pentagramu
+	$$\frac{a+b}{a}=\frac{a}{b}$$, dla $a=1 \:$
+	$\frac{1}{b}=\frac{b+1}{1}\Leftrightarrow b(b+1)=1 \Leftrightarrow b^2+b-1=0$ 
+	
+	$\Delta=1+4=5$ 
+	
+	$b_1=\frac{-1-\sqrt{5}}{2} \vee b_2\frac{-1+\sqrt{5}}{2}$
+	
+	Dotyczył on w szczególności pentagramu:
 	$$\frac{\text{duży}}{\text{średni}}=\frac{\text{średni}}{\text{mały}}$$
 	}
 	
@@ -1434,7 +1434,7 @@
 	
 	\item Sformułować hipotezę Riemanna.
 	\Odp{
-		Wszystkie nietrywialne miejsca zerowe funkcji dzeta leża na prostej $\Re z= \frac{1}{2}$
+		Wszystkie nietrywialne miejsca zerowe funkcji dzeta leża na prostej $\text{Re} z= \frac{1}{2}$
 		
 		\includegraphics[width=0.75\linewidth]{hpriemanna.jpeg}
 		
