--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -881,7 +881,7 @@
 	\Odp{
 		\includegraphics[width=0.4\linewidth]{trj_proof_4.jpeg}
 		
-		Trójkąty $ABF$ i $ACE$ są przystające (cecha BKB). $\Rightarrow$ $\angle AEC = \angle BFA \Rightarrow |CE| = |CF| \Rightarrow |AB|=|AC|$
+		Trójkąty $BCE$ i $BCF$ są przystające (cecha BKB). $\Rightarrow$ $\angle BEC = \angle BFC \Rightarrow |CE| = |CF| \Rightarrow |AB|=|AC|$
 	}
 	
 	\item Udowodnić, że symetralne boków trójkąta przecinają się w jednym punkcie.
@@ -1210,8 +1210,8 @@
 	\Odp{
 		$$\sin\alpha+\sin\beta=2\sin\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$$
 		$$\sin\alpha-\sin\beta=2\cos\frac{\alpha+\beta}{2}\sin\frac{\alpha-\beta}{2}$$
-		$$\cos\alpha+\cos\beta=2\cos\frac{\alpha+\beta}{2}\sin\frac{\alpha-\beta}{2}$$
-		$$\cos\alpha-\cos\beta=-2\sin\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$$
+		$$\cos\alpha+\cos\beta=2\cos\frac{\alpha+\beta}{2}\cos\frac{\alpha-\beta}{2}$$
+		$$\cos\alpha-\cos\beta=-2\sin\frac{\alpha+\beta}{2}\sin\frac{\alpha-\beta}{2}$$
 	}
 	
 	\item Podać mechanizm tworzenia wzorów redukcyjnych i stosować go w praktyce.
