--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -1028,7 +1028,7 @@
 		
 		T: $\exists g,h : D\rightarrow \mathbb{R}$, $g$ - parzysta. $h$ - nieparzysta $: f=g+h$
 		
-		D: Zdefiniujmy $g(x):=\frac{f(x)-f(-x)}{2}$, $h(x):=\frac{f(x)+f(-x)}{2}$. Wówczas
+		D: Zdefiniujmy $g(x):=\frac{f(x)+f(-x)}{2}$, $h(x):=\frac{f(x)-f(-x)}{2}$. Wówczas
 		\begin{itemize}
 			\item $g(x)=g(-x)$
 			\item $h(-x)=\frac{f(-x)-f(x)}{2}=\frac{-f(x)-f(-x)}{2}=-h(x)$
