--- a/Egzamin - opracowane zagadnienia.tex
+++ b/Egzamin - opracowane zagadnienia.tex
@@ -776,7 +776,7 @@
 			
 			\includegraphics[width=\linewidth]{2ind180.jpeg}
 			
-			Bierzemy $(n+1)-kąt$. Ma in ucho $\Rightarrow$ odcinamy je. Powstaje $n$-kąt.
+			Bierzemy $(n+1)$-kąt. Ma in ucho $\Rightarrow$ odcinamy je. Powstaje $n$-kąt.
 			
 			$(n-2)\cdot180^\circ+180^\circ = (n-1)\cdot180^\circ = ((n+1)-2)\cdot180^\circ$
 			
@@ -917,9 +917,9 @@
 	\Odp{
 		\includegraphics[width=0.6\linewidth]{trj_proof_8.jpeg}
 		
-		Dorysowuwuje odcinek $EF$ równoległy do $BC$ (odwrotne tw. Talesa)
+		Dorysowywuje odcinek $EF$ równoległy do $BC$ (odwrotne tw. Talesa)
 		
-		Dziele $AO$ i $CO$ w połowie (punkty $M$ i $N$) $(|MN|\: ||\: |EF|)$
+		Dziele $AO$ i $CO$ w połowie (punkty $M$ i $N$) $(MN\: ||\: EF)$
 		
 		Z twierdzenia Talesa $\frac{FE}{BC}=\frac{MN}{BC}=\frac{1}{2} \Rightarrow MN=EF \Rightarrow MNEF$ jest równoległobokiem.
 		
@@ -1065,17 +1065,17 @@
 	\Odp{
 		D: 
 		\begin{enumerate}[(1)]
-			\item Hp. $\exists_{x_1,x_2} x_1\neq x_2 f(x_1)=f(x_2)$
+			\item Hp. $\exists_{x_1,x_2} x_1\neq x_2\: f(x_1)=f(x_2)$
 			
 			$g(f(x_1))=g(f(x_2))$
 			
 			$(g\circ f)(x_1)=(g\circ f)(x_2)$ sprzeczność
 			
-			\item $z\in Z \exists_{x\in X} (g\circ f)(x)=z$
+			\item $z\in Z\: \exists_{x\in X} (g\circ f)(x)=z$
 			
 			$g(f(x))=z$
 			
-			$y=f(x)\in Y$, $g(f(x))=z$ ok 
+			$y=f(x)\in Y$, $g(f(x))=z\qquad$   ok 
 		\end{enumerate}
 	}
 	
@@ -1143,7 +1143,7 @@
 	
 	\item Uzasadnić, że deﬁnicje funkcji trygonometrycznych dla dowolnego kąta są uogólnieniem analogicznych deﬁnicji dla kąta ostrego.
 	\Odp{
-		Rozważając kat $\alpha$ ostry, otrzymujemy zwykły trójkąt prostokątny (gdzie sieczna jest przyprostokątną przeciwległą, rzędna jest przyprostokątną przyległa, a promień jest przeciwprostokątną).
+		Rozważając kat $\alpha$ ostry, otrzymujemy zwykły trójkąt prostokątny (gdzie odcięta jest przyprostokątną przeciwległą, rzędna jest przyprostokątną przyległa, a promień jest przeciwprostokątną).
 	}
 	
 	\item Zdeﬁniować funkcje sinus, cosinus, tangens, cotangens dla argumentu zespolonego.
@@ -1672,7 +1672,7 @@
 		
 		\textbf{Definicja Heinego}
 		
-		$\forall_{(x_n)\subset D} x_n\rightarrow x_0 \Rightarrow f(x_n)\rightarrow f(x)$
+		$\forall_{(x_n)\subset D}\: x_n\rightarrow x_0 \Rightarrow f(x_n)\rightarrow f(x)$
 		
 		
 	}
